# f4-quick

./: .gitignore  Cargo.toml  Embed.toml  memory.x
.cargo/: config
src/: main.rs
